added 360view media

--- a/index.html
+++ b/index.html
@@ -90,5 +90,21 @@
         </div>
         <p> &copy; Monastery360. All rights reserved.</p>
     </footer>
+
+    <!-- Virtual 360° Modal -->
+    <div class="overlay" id="videoOverlay">
+      <div class="popup">
+        <span class="close-btn" id="closeBtn">&times;</span>
+        <video controls>
+          <source src="./media/Video_Editing_and_Monastery_View.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
+
+
+
 </html>
