--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Monastery360</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -11,12 +11,13 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Monastery360</h1>
+                <h1> <a href="index.html">Monastery360</a></h1>
             </div>
             <div class="nav-options">
                 <p>Digital Archive</p>
                 <p>Cultural Calendar</p>
                 <p>Interactive Map</p>
+                <p><a href="chatbot-src/chatbot.html" id="chatbotLink">Chatbot</a></p>
                 <button class="nav">Login</button>
             </div>
         </nav>
